<?xml version="1.0" encoding="UTF-8" ?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<!-- Maven plugin versions -->
		<javadoc.version>3.3.1</javadoc.version>
		<sshwagon.version>2.6</sshwagon.version>
		
		<!-- Dependency versions -->
		<slf4j.version>1.7.33</slf4j.version>
		<junit.version>4.13.2</junit.version>
		<guava.version>31.0.1-jre</guava.version>
		<jackson.version>2.13.1</jackson.version>
		<easymock.version>5.6.0</easymock.version>
		<httpcomponents.version>4.5.13</httpcomponents.version>
		<docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
		<skipTests>false</skipTests>
	</properties>
	<scm>
		<url>https://github.com/datacleaner/metamodel</url>
		<connection>scm:git:git@github.com:datacleaner/metamodel.git</connection>
		<developerConnection>scm:git:git@github.com:datacleaner/metamodel.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<groupId>org.datacleaner.metamodel</groupId>
	<artifactId>MetaModel</artifactId>
	<version>5.3.7</version>
	<name>MetaModel</name>
	<description>MetaModel is a library that encapsulates the differences and enhances 
		the capabilities of different datastores. Rich querying abilities are
		offered to datastores that do not otherwise support advanced querying
		and a unified view of the datastore structure is offered through a
		single model of the schemas, tables, columns and relationships.</description>
	<url>http://metamodel.apache.org</url>
	<inceptionYear>2007</inceptionYear>
	<packaging>pom</packaging>
	<modules>
		<module>core</module>
		<module>pojo</module>
		<module>fixedwidth</module>
		<module>excel</module>
		<module>csv</module>
		<module>arff</module>
		<module>json</module>
		<module>xml</module>
		<module>jdbc</module>
		<module>full</module>
	</modules>
	<issueManagement>
		<system>GitHub issues</system>
		<url>https://github.com/datacleaner/metamodel/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<id>kaspersor</id>
			<name>Kasper Sørensen</name>
			<email>kaspersor@proton.me</email>
			<url>https://github.com/kaspersorensen</url>
		</developer>
		<developer>
			<name>Dennis Du Krøger</name>
			<url>https://github.com/losd</url>
		</developer>
		<developer>
			<name>Ankit Kumar</name>
			<url>https://github.com/ankit2711</url>
		</developer>
		<developer>
			<name>Alberto Rodriguez</name>
			<url>https://github.com/albertostratio</url>
		</developer>
		<developer>
			<name>Tomasz Guzialek</name>
			<url>https://github.com/tomaszguzialek</url>
		</developer>
		<developer>
			<name>Henry Saputra</name>
			<url>https://github.com/hsaputra</url>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Arjan Seijkens</name>
			<url>https://github.com/arjansh</url>
		</contributor>
		<contributor>
			<name>Jakub Horčička</name>
			<url>https://github.com/jhorcicka</url>
		</contributor>
		<contributor>
			<name>Francisco Javier Cano</name>
			<organization>Stratio</organization>
		</contributor>
		<contributor>
			<name>Harel Efraim</name>
			<url>https://github.com/harel-e</url>
		</contributor>
		<contributor>
			<name>Joerg Unbehauen</name>
			<url>https://github.com/tomatophantastico</url>
		</contributor>
		<contributor>
			<name>Saurabh Gupta</name>
			<organization>Xebia India</organization>
		</contributor>
		<contributor>
			<name>Balendra Singh</name>
			<organization>Xebia India</organization>
		</contributor>
		<contributor>
			<name>Sameer Arora</name>
			<organization>Xebia India</organization>
		</contributor>
	</contributors>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>utf-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.rat</groupId>
				<artifactId>apache-rat-plugin</artifactId>
				<executions>
					<execution>
						<id>rat-verify</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<goals>deploy</goals>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.12.2</version>
					</dependency>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-api</artifactId>
						<version>1.12.2</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--add-opens=java.base/java.lang=ALL_UNNAMED --add-opens=java.base/java.io=ALL_UNNAMED</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.sonar</groupId>
				<artifactId>sonar-maven3-plugin</artifactId>
				<version>2.8</version>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<dependencies>
					<dependency>
						<!-- Provide support for scp based deployment of site -->
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>${sshwagon.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<!-- create aggregate report when "mvn site" is invoked. -->
						<id>aggregate</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
						<phase>site</phase>
					</execution>
				</executions>
				<configuration>
					<excludePackageNames>com.sugarcrm.ws.soap</excludePackageNames>
					<doclint>none</doclint>
				</configuration>
			</plugin>

			<plugin>
				<!-- enforce certain banned dependencies -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<exclude>commons-logging:commons-logging:compile</exclude>
										<exclude>org.codehaus.jackson:compile</exclude>

										<!-- commons-beanutils-core is redundant when we already depend 
											on commons-beanutils -->
										<exclude>commons-beanutils:commons-beanutils-core:*</exclude>

										<!-- stax-api is overlapping with xml-apis -->
										<exclude>stax:stax-api:*</exclude>
										<exclude>javax.xml.stream:stax-api</exclude>
										
										<!-- codehaus woodstox is overlapping with FasterXML woodstox -->
										<exclude>org.codehaus.woodstox:woodstox-core-asl:*</exclude>

										<!-- findbugs-annotations is overlapping with net.sourceforge.findbugs:annotations -->
										<exclude>com.github.stephenc.findbugs:findbugs-annotations:*</exclude>

										<!-- net.jcip:jcip-annotations is overlapping with net.sourceforge.findbugs:annotations -->
										<exclude>net.jcip:jcip-annotations</exclude>
										
										<!-- com.sun.activation:javax.activation is overlapping with javax.activation:javax.activation-api -->
										<exclude>com.sun.activation:javax.activation</exclude>
									</excludes>
								</bannedDependencies>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<extensions>
			<extension>
				<!-- Provide support for scp based deployment of site -->
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>${sshwagon.version}</version>
			</extension>
		</extensions>

		<pluginManagement>
			<plugins>
				<plugin>
					<!-- Ignore instructions for m2e (overrides eclipse warning) -->
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.rat
										</groupId>
										<artifactId>
											apache-rat-plugin
										</artifactId>
										<versionRange>
											[0.8,)
										</versionRange>
										<goals>
											<goal>check</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.rat</groupId>
					<artifactId>apache-rat-plugin</artifactId>
					<configuration>
						<licenses>
							<license implementation="org.apache.rat.analysis.license.SimplePatternBasedLicense">
								<licenseFamilyCategory>ASL20</licenseFamilyCategory>
								<licenseFamilyName>Apache Software License, 2.0</licenseFamilyName>
								<notes>Single licensed ASL v2.0</notes>
								<patterns>
									<pattern>Licensed to the Apache Software Foundation (ASF) under
										one
										or more contributor license agreements.</pattern>
								</patterns>
							</license>
						</licenses>
						<excludeSubProjects>false</excludeSubProjects>
						<excludes>
							<exclude>KEYS</exclude>
							<exclude>.releaserc.json</exclude>
							<exclude>**/*.md</exclude>
							<exclude>example-metamodel-integrationtest-configuration.properties</exclude>
							<exclude>travis-metamodel-integrationtest-configuration.properties</exclude>
							<exclude>**/src/assembly/metamodel-packaged-assembly-descriptor.xml</exclude>
							<exclude>**/.gitignore/**</exclude>
							<exclude>.git/**</exclude>
							<exclude>.github/**</exclude>
							<exclude>.gitattributes</exclude>
							<exclude>**/.toDelete</exclude>
							<exclude>**/src/main/resources/META-INF/services/**</exclude>
							<exclude>**/src/test/resources/**</exclude>
							<exclude>**/src/site/**</exclude>
							<exclude>**/.project</exclude>
							<exclude>**/.classpath</exclude>
							<exclude>**/.settings/**</exclude>
							<exclude>**/.vscode/**</exclude>
							<exclude>**/.travis.yml</exclude>
							<exclude>**/target/**</exclude>
							<exclude>**/*.iml/**</exclude>
							<exclude>**/*.iws/**</exclude>
							<exclude>**/*.ipr/**</exclude>
							<exclude>**/.idea/**</exclude>
							<exclude>**/swagger-ui/**</exclude>
							<exclude>DEPENDENCIES</exclude>
							<exclude>DISCLAIMER</exclude>
							<exclude>neo4j-community-*/**</exclude>
						</excludes>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${javadoc.version}</version>
				<reportSets>
					<reportSet>
						<id>aggregate</id>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>5.5.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpcomponents.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>commons-logging</artifactId>
						<groupId>commons-logging</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.4</version>
				<exclusions>
					<exclusion>
						<artifactId>commons-logging</artifactId>
						<groupId>commons-logging</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.findbugs</groupId>
				<artifactId>annotations</artifactId>
				<version>1.3.2</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.15</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>commons-pool</groupId>
				<artifactId>commons-pool</artifactId>
				<version>1.6</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-yaml</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-json-org</artifactId>
				<version>${jackson.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.codehaus.jackson</groupId>
						<artifactId>jackson-core-asl</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.codehaus.jackson</groupId>
						<artifactId>jackson-mapper-asl</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>hsqldb</groupId>
				<artifactId>hsqldb</artifactId>
				<version>1.8.0.10</version>
			</dependency>

			<!-- Test dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-nop</artifactId>
				<version>${slf4j.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/datacleaner/metamodel</url>
		</repository>
	</distributionManagement>
</project>
